# reppl

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  appl.yaml
prompt-optimization/: README.md  appl.yaml  erm_blog.md
prompt-optimization/algo/erm/: erm.py
prompt-optimization/data/bbh/: README.md
prompt-optimization/resources/erm/: erm.md
prompt-optimization/traces/: erm_trace_meta.json
reflexion/: README.md  appl.yaml  reflexion.py  simple.py
tree-of-thoughts/: README.md  pyproject.toml
tree-of-thoughts/tot/: __init__.py  cache.py  cli.py  evaluator.py  examples.py  game24.py  generator.py  solver.py  utils.py
tree-of-thoughts/traces/: tot-solve_meta.json
